--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,9 @@
         "sensio/distribution-bundle": "~4.0",
         "sensio/framework-extra-bundle": "^3.0.2",
         "incenteev/composer-parameter-handler": "~2.0",
-        "jsor/doctrine-postgis": "^1.0"
+        "jsor/doctrine-postgis": "^1.0",
+        "doctrine/doctrine-fixtures-bundle": "dev-master",
+        "doctrine/data-fixtures": "dev-master"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
